Add Create New Wedding
* User can create new wedding record with pre-assigned number of tables.
* Add 'weddings' table to database.

--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,13 @@ body {
 }
 
 /* General */
-h1, h2, h3, h4, h5, h6, .title {
+h1, h2, h3, h4, h5, h6, label, .title {
 	color: #FF0000;
-	opacity: 0.6;
+	opacity: 0.8;
+}
+
+label {
+	font-weight: bold;
 }
 
 a, em, strong {
